# allndb

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
test/: tests.cpp
